<resources>
    <string name="mine_app_name">module-mine</string>
    <string name="mine_settings">设置</string>
    <string name="mine_lv">lv.%s</string>
    <string name="mine_id">ID:%s</string>
    <string name="mine_integral_list">积分榜</string>
    <string name="mine_my_integral">我的积分</string>
    <string name="mine_current_integral">当前积分：%s</string>
    <string name="mine_integral_record">积分记录</string>
    <string name="mine_my_collect">我的收藏</string>
    <string name="mine_my_share">我的分享</string>

    <string name="mine_language_setting">语言设置</string>
    <string name="mine_zh_cn">简体中文</string>
    <string name="mine_english">英语</string>
    <string name="mine_clear_cache">清除缓存</string>
    <string name="mine_current_version">当前版本</string>
    <string name="mine_copyright">版权声明</string>
    <string name="mine_about_us">关于我们</string>

    <string name="mine_logout">退出登录</string>
</resources>