<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.ara.mine.ui.state.LanguageActivityViewModel" />

        <variable
            name="click"
            type="com.ara.mine.ui.page.LanguageActivity.ClickProxy" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.page.LanguageActivity">

        <com.ara.project_common.ui.view.TitleBar
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:barTitleText="@string/mine_language_setting"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_white"
                    android:gravity="center"
                    android:onClick="@{()->click.zhCN()}"
                    android:text="@string/mine_zh_cn"
                    android:textColor="@{vm.language==0?@color/colorPrimary:@color/text_33}"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/btn_white"
                    android:gravity="center"
                    android:onClick="@{()->click.en()}"
                    android:text="@string/mine_english"
                    android:textColor="@{vm.language==1?@color/colorPrimary:@color/text_33}"
                    android:textSize="16sp" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>