<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.ara.mine.ui.state.MineFragmentViewModel" />

        <variable
            name="onRefreshListener"
            type="com.scwang.smart.refresh.layout.listener.OnRefreshListener" />

        <variable
            name="click"
            type="com.ara.mine.ui.page.MineFragment.ClickProxy" />

    </data>

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        autoRefresh="@{vm.autoRefresh}"
        enableLoadMore="@{false}"
        onRefreshListener="@{onRefreshListener}"
        refreshLoadState="@{vm.listLoadState}"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.page.MineFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/colorPrimary">

                    <include
                        android:id="@+id/bar"
                        layout="@layout/state_bar_view"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="@dimen/title_height"
                        android:layout_height="@dimen/title_height"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:onClick="@{()->click.settings()}"
                        android:text="@string/mine_settings"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/bar" />

                    <ImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="20dp"
                        android:src="@mipmap/ic_logo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="5dp"
                        android:text="@{vm.account.username}"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toRightOf="@id/iv_avatar"
                        app:layout_constraintTop_toTopOf="@id/iv_avatar" />

                    <TextView
                        android:id="@+id/tv_lv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:background="@drawable/bg_round_border_white_1dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@{@string/mine_lv(vm.integral.level)}"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
                        app:layout_constraintLeft_toRightOf="@id/iv_avatar"
                        app:layout_constraintTop_toTopOf="@id/iv_avatar" />

                    <TextView
                        android:id="@+id/tv_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="5dp"
                        android:text="@{@string/mine_id(vm.account.id)}"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
                        app:layout_constraintLeft_toRightOf="@id/iv_avatar" />

                    <TextView
                        android:id="@+id/tv_integral_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:background="@drawable/mine_bg_white_25_left_round_16dp"
                        android:onClick="@{()->click.integralRank()}"
                        android:paddingStart="30dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="5dp"
                        android:text="@string/mine_integral_list"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{()->click.myIntegral()}"
                    android:orientation="horizontal"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <View
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@mipmap/ic_mine1" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:text="@string/mine_my_integral"
                        android:textColor="@color/text_33"
                        android:textSize="16sp" />

                    <TextView
                        visible="@{vm.integral!=null}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="10dp"
                        android:text="@{@string/mine_current_integral(vm.integral.coinCount)}"
                        android:textColor="@color/text_66"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/ic_arrow_right" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{()->click.myCollect()}"
                    android:orientation="horizontal"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <View
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@mipmap/ic_mine2" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:text="@string/mine_my_collect"
                        android:textColor="@color/text_33"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/ic_arrow_right" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{()->click.myShare()}"
                    android:orientation="horizontal"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <View
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@mipmap/ic_mine3" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:text="@string/mine_my_share"
                        android:textColor="@color/text_33"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/ic_arrow_right" />
                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
</layout>